--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An app where one can find and advertise for services",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Henry Amuka <bugzy231@gmail.com>",
   "license": "MIT",
