--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "faker": "^4.1.0",
     "mongoose": "^5.1.4",
     "nodemailer": "^4.6.7",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^1.17.5",
     "util": "^0.11.0"
   },
