--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "afrihub",
   "version": "0.1.1",
-  "description": "An app where one can find and advertise for services",
+  "description": "An app where one can find and advertise IT services",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
